Closed Bug 836994 Opened 12 years ago Closed 12 years ago

nsGeolocation::WatchPosition checks the wrong storage array

Categories

(Core :: DOM: Geolocation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: jdm, Assigned: glennal.buford)

Details

(Whiteboard: [mentor=jdm][lang=c++][good first bug])

Attachments

(1 file, 1 obsolete file)

WatchPosition should check mWatchingCallbacks, not mPendingCallbacks. http://hg.mozilla.org/mozilla-central/annotate/50cf5bbcb180/dom/src/geolocation/nsGeolocation.cpp#l1340
I'd like to take this bug
Attached patch proposed patch (obsolete) — Splinter Review
You can go ahead and request review when you post a patch. That implicitly sets the "next action" of the bug to the reviewer, to provide feedback and make a call about whether the patch is ready to land. (Until then, the ball is in your court, as the assignee.) (It may not always be immediately clear who an appropriate reviewer would be. In this case, jdm's probably a good choice, since he filed the bug suggesting the change -- and if he doesn't feel comfortable reviewing, I'm sure he'll kick the review request off to a more appropriate reviewer.)
Attached patch Patch (v2)Splinter Review
Added commit message
Attachment #709502 - Attachment is obsolete: true
Attachment #709524 - Flags: review?(josh)
Comment on attachment 709524 [details] [diff] [review] Patch (v2) Review of attachment 709524 [details] [diff] [review]: ----------------------------------------------------------------- Great, and thanks for the commit message. I'll fix it up and commit your patch with the following message: "Bug 836994: Check the right array when using using WatchPosition. r=jdm"
Attachment #709524 - Flags: review?(josh) → review+
OS: Linux → All
Hardware: x86_64 → All
Version: unspecified → Trunk
Assignee: nobody → glennal.buford
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: