Bug 836994: Check the right array when using using WatchPosition. r=jdm